--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,7 +28,7 @@
   },
   "include": [
     "src",
-    "vite.config.ts"
+    // "vite.config.ts"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
